--- a/src/app/navigationpages/blog/dev/post/rsa-hsa.component.html
+++ b/src/app/navigationpages/blog/dev/post/rsa-hsa.component.html
@@ -1,4 +1,6 @@
-<cm-blog-post>
+<cm-blog-post
+    [postTitle]="postTitle"
+    [postTimestamp]="postTimestamp">
     <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, vero, obcaecati, aut,
         error quam sapiente nemo saepe quibusdam sit excepturi nam quia corporis eligendi eos magni recusandae
         laborum minus inventore?</p>
