- resize sidebar - move post abstract to template - show image conditionally - write rsa-hsa abstract

--- a/src/app/navigationpages/blog/dev/post/rsa-hsa.component.html
+++ b/src/app/navigationpages/blog/dev/post/rsa-hsa.component.html
@@ -1,9 +1,7 @@
 <cm-blog-post
     [postTitle]="postTitle"
-    [postTimestamp]="postTimestamp">
-    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, vero, obcaecati, aut,
-        error quam sapiente nemo saepe quibusdam sit excepturi nam quia corporis eligendi eos magni recusandae
-        laborum minus inventore?</p>
+    [postTimestamp]="postTimestamp"
+    [postAbstract]="postAbstract()">
 
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, tenetur natus doloremque laborum quos iste
         ipsum rerum obcaecati impedit odit illo dolorum ab tempora nihil dicta earum fugiat. Temporibus,
