--- a/src/app/shared/blog-overview/blog-overview.component.html
+++ b/src/app/shared/blog-overview/blog-overview.component.html
@@ -1,6 +1,4 @@
-<h1 class="mt-4 mb-3">Developer Blog
-    <small>Subheading</small>
-</h1>
+<h1 class="mt-4 mb-3">{{blogTitle}}</h1>
 
 <div class="row">
 
@@ -58,10 +56,10 @@
         <!-- Pagination -->
         <ul class="pagination justify-content-center mb-4">
             <li class="page-item">
-                <a class="page-link" href="#">&larr; Older</a>
+                <a class="page-link" href="#">&larr; Newer</a>
             </li>
             <li class="page-item disabled">
-                <a class="page-link" href="#">Newer &rarr;</a>
+                <a class="page-link" href="#">Older &rarr;</a>
             </li>
         </ul>
 
