--- a/src/app/navigationpages/blog/gaming/gaming-blog.component.html
+++ b/src/app/navigationpages/blog/gaming/gaming-blog.component.html
@@ -1,3 +1,5 @@
 <div class="container clearfix">
-    <cm-blog-overview></cm-blog-overview>
+    <cm-blog-overview
+        [blogTitle]="blogTitle">
+    </cm-blog-overview>
 </div>
