automatically list all dev blog posts and sort them based on date

--- a/src/app/navigationpages/blog/dev/developer-blog.component.html
+++ b/src/app/navigationpages/blog/dev/developer-blog.component.html
@@ -1,5 +1,6 @@
 <div class="container clearfix">
     <cm-blog-overview
-        [blogTitle]="blogTitle">
+        [blogTitle]="blogTitle"
+        [blogPosts]="posts">
     </cm-blog-overview>
 </div>
