--- a/src/app/navigationpages/blog/dev/post/graphql.component.html
+++ b/src/app/navigationpages/blog/dev/post/graphql.component.html
@@ -1,6 +1,6 @@
 <cm-blog-post
-    [postTitle]="postTitle"
-    [postTimestamp]="postTimestamp">
+    [postTitle]="postTitle()"
+    [postDate]="postDate()">
     <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, vero, obcaecati, aut,
         error quam sapiente nemo saepe quibusdam sit excepturi nam quia corporis eligendi eos magni recusandae
         laborum minus inventore?</p>
