--- a/src/app/navigationpages/blog/dev/post/rsa-hsa.component.html
+++ b/src/app/navigationpages/blog/dev/post/rsa-hsa.component.html
@@ -1,6 +1,6 @@
 <cm-blog-post
-    [postTitle]="postTitle"
-    [postTimestamp]="postTimestamp"
+    [postTitle]="postTitle()"
+    [postDate]="postDate()"
     [postAbstract]="postAbstract()">
 
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, tenetur natus doloremque laborum quos iste
