--- a/src/app/shared/blog-overview/blog-overview.component.html
+++ b/src/app/shared/blog-overview/blog-overview.component.html
@@ -1,59 +1,26 @@
 <h1 class="mt-4 mb-3">{{blogTitle}}</h1>
 
 <div class="row">
-
-    <!-- Blog Entries Column -->
     <div class="col-md-9">
 
-        <!-- Blog Post -->
-        <div class="card mb-4">
-            <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
-            <div class="card-body">
-                <h2 class="card-title">Post Title</h2>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque,
-                    nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate
-                    voluptatibus possimus, veniam magni quis!</p>
-                <a href="#" class="btn btn-primary">Read More &rarr;</a>
-            </div>
-            <div class="card-footer text-muted">
-                Posted on January 1, 2017 by
-                <a href="#">Start Bootstrap</a>
-            </div>
-        </div>
-
-        <!-- Blog Post -->
-        <div class="card mb-4">
-            <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
-            <div class="card-body">
-                <h2 class="card-title">Post Title</h2>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque,
-                    nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate
-                    voluptatibus possimus, veniam magni quis!</p>
-                <a href="#" class="btn btn-primary">Read More &rarr;</a>
-            </div>
-            <div class="card-footer text-muted">
-                Posted on January 1, 2017 by
-                <a href="#">Start Bootstrap</a>
+        <div *ngFor="let post of blogPosts">
+            <div class="card mb-4">
+                <img *ngIf="postImagePresent(post)"
+                     class="card-img-top"
+                     src="assets/images/{{post.postImageName}}"
+                     alt="Card image cap">
+                <div class="card-body">
+                    <h2 class="card-title">{{post.postTitle}}</h2>
+                    <p class="card-text">{{post.postAbstract}}</p>
+                    <a [routerLink]="post.path" class="btn btn-primary">Read More &rarr;</a>
+                </div>
+                <div class="card-footer text-muted">
+                    Posted on {{post.postDate | date:'longDate'}} by
+                    <a [routerLink]="['/about']">Alexander Tang</a>
+                </div>
             </div>
         </div>
 
-        <!-- Blog Post -->
-        <div class="card mb-4">
-            <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
-            <div class="card-body">
-                <h2 class="card-title">Post Title</h2>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque,
-                    nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate
-                    voluptatibus possimus, veniam magni quis!</p>
-                <a href="#" class="btn btn-primary">Read More &rarr;</a>
-            </div>
-            <div class="card-footer text-muted">
-                Posted on January 1, 2017 by
-                <a href="#">Start Bootstrap</a>
-            </div>
-        </div>
-
-        <!-- Pagination -->
         <ul class="pagination justify-content-center mb-4">
             <li class="page-item">
                 <a class="page-link" href="#">&larr; Newer</a>
@@ -62,7 +29,6 @@
                 <a class="page-link" href="#">Older &rarr;</a>
             </li>
         </ul>
-
     </div>
 
     <div class="col-md-3">
