--- a/src/app/core/mainheader/main-header.component.html
+++ b/src/app/core/mainheader/main-header.component.html
@@ -21,8 +21,14 @@
                         Blog
                         </a>
                     <div *dropdownMenu class="dropdown-menu dropdown-menu-right">
-                        <a class="dropdown-item" [routerLink]="['/blogs/dev']" routerLinkActive="active">Developer Blog</a>
-                        <a class="dropdown-item" [routerLink]="['/blogs/game']" routerLinkActive="active">Gaming Blog</a>
+                        <a class="dropdown-item"
+                           [routerLink]="['/blogs/dev']"
+                           [queryParams]="{page: 1}"
+                           routerLinkActive="active">Developer Blog</a>
+                        <a class="dropdown-item"
+                           [routerLink]="['/blogs/game']"
+                           [queryParams]="{page: 1}"
+                           routerLinkActive="active">Gaming Blog</a>
                     </div>
                 </li>
                 <li class="nav-item">
