--- a/src/app/navigationpages/about/about.component.html
+++ b/src/app/navigationpages/about/about.component.html
@@ -1,96 +1,26 @@
-<!-- Page Heading/Breadcrumbs -->
-<h1 class="mt-4 mb-3">About
-    <small>Subheading</small>
-</h1>
-
-<!-- Intro Content -->
-<div class="row">
-    <div class="col-lg-6">
-        <img class="img-fluid rounded mb-4" src="http://placehold.it/750x450" alt="">
-    </div>
-    <div class="col-lg-6">
-        <h2>About Modern Business</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed voluptate nihil eum consectetur similique?
-            Consectetur, quod, incidunt, harum nisi dolores delectus reprehenderit voluptatem perferendis dicta dolorem
-            non blanditiis ex fugiat.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, magni, aperiam vitae illum voluptatum aut
-            sequi impedit non velit ab ea pariatur sint quidem corporis eveniet. Odit, temporibus reprehenderit
-            dolorum!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, consequuntur, modi mollitia corporis ipsa
-            voluptate corrupti eum ratione ex ea praesentium quibusdam? Aut, in eum facere corrupti necessitatibus
-            perspiciatis quis?</p>
-    </div>
-</div>
-<!-- /.row -->
-
-<!-- Team Members -->
-<h2>Our Team</h2>
+<h1 class="mt-4 mb-3">About - Alexander Tang</h1>
 
 <div class="row">
-    <div class="col-lg-4 mb-4">
-        <div class="card h-100 text-center">
-            <img class="card-img-top" src="http://placehold.it/750x450" alt="">
-            <div class="card-body">
-                <h4 class="card-title">Team Member</h4>
-                <h6 class="card-subtitle mb-2 text-muted">Position</h6>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum
-                    ipsum fugiat odio officiis odit.</p>
-            </div>
-            <div class="card-footer">
-                <a href="#">name@example.com</a>
-            </div>
-        </div>
+    <div class="col-lg-5">
+        <img class="img-fluid rounded mb-4" src="assets/images/me_with_bruce_lee.jpg" alt="">
     </div>
-    <div class="col-lg-4 mb-4">
-        <div class="card h-100 text-center">
-            <img class="card-img-top" src="http://placehold.it/750x450" alt="">
-            <div class="card-body">
-                <h4 class="card-title">Team Member</h4>
-                <h6 class="card-subtitle mb-2 text-muted">Position</h6>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum
-                    ipsum fugiat odio officiis odit.</p>
-            </div>
-            <div class="card-footer">
-                <a href="#">name@example.com</a>
-            </div>
-        </div>
-    </div>
-    <div class="col-lg-4 mb-4">
-        <div class="card h-100 text-center">
-            <img class="card-img-top" src="http://placehold.it/750x450" alt="">
-            <div class="card-body">
-                <h4 class="card-title">Team Member</h4>
-                <h6 class="card-subtitle mb-2 text-muted">Position</h6>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum
-                    ipsum fugiat odio officiis odit.</p>
-            </div>
-            <div class="card-footer">
-                <a href="#">name@example.com</a>
-            </div>
-        </div>
+    <div class="col-lg-7">
+        <p>I am a software developer by trade. I graduated from KU Leuven in 2017 with a masters degree in Computer
+            Science and specialization in AI. Since then I have learned a lot about various technologies in the world of
+            full stack web development.</p>
+        <p>During my learning process I was lucky to have an abundance in online teaching material
+            made available by other experts. With this blog I wish to give back to the community by sharing my insights.
+            I encourage you to mail me about any mistakes you may have found, subjects that were not clear to
+            you, contributions you found particularly helpful, any feedback really.</p>
+        <p>One of my other hobbies is video gaming. I am also currently studying Chinese and enjoy Chinese games. It
+            could be interesting to start a
+            <a [routerLink]="['/blogs/game']" [queryParams]="{page: 1}"><i>Let's Play</i> gaming blog</a> which
+            features Chinese games for Western audiences. Perhaps it will trigger an interest you did not know you had.
+            My level of Chinese is still very immature and I am bound to make mistakes. I welcome any feedback on my
+            writing! Enjoy.
+        </p>
     </div>
 </div>
-<!-- /.row -->
 
-<!-- Our Customers -->
-<h2>Our Customers</h2>
-<div class="row">
-    <div class="col-lg-2 col-sm-4 mb-4">
-        <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-    </div>
-    <div class="col-lg-2 col-sm-4 mb-4">
-        <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-    </div>
-    <div class="col-lg-2 col-sm-4 mb-4">
-        <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-    </div>
-    <div class="col-lg-2 col-sm-4 mb-4">
-        <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-    </div>
-    <div class="col-lg-2 col-sm-4 mb-4">
-        <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-    </div>
-    <div class="col-lg-2 col-sm-4 mb-4">
-        <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-    </div>
-</div>
+<h3 class="mt-4 mb-3">Contact Me</h3>
+<p><b>E-mail: </b><a href="javascript:void(0);" (click)="mailTo()"> alexanderghtang@gmail.com</a></p>
