refactoring: NewModule becomes HomeModule + fix TSLint

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <main class="container">
-    <cm-main-header></cm-main-header>
+    <app-main-header></app-main-header>
 
     <div class="container">
         <br/>
@@ -7,6 +7,6 @@
         <router-outlet></router-outlet>
     </div>
 
-    <cm-footer></cm-footer>
+    <app-footer></app-footer>
 </main>
 <br/><br/>
