--- a/src/app/core/mainheader/main-header.component.html
+++ b/src/app/core/mainheader/main-header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-        <a class="navbar-brand" [routerLink]="['/news']">Home</a>
+        <a class="navbar-brand" [routerLink]="['/']">Home</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
                 data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
                 aria-label="Toggle navigation">
