--- a/src/app/navigationpages/blog/dev/developer-blog.component.html
+++ b/src/app/navigationpages/blog/dev/developer-blog.component.html
@@ -1,6 +1,6 @@
 <div class="container clearfix">
-    <cm-blog-overview
+    <app-blog-overview
         [blogTitle]="blogTitle"
         [blogPosts]="posts">
-    </cm-blog-overview>
+    </app-blog-overview>
 </div>
