--- a/src/app/navigationpages/blog/gaming/gaming-blog.component.html
+++ b/src/app/navigationpages/blog/gaming/gaming-blog.component.html
@@ -1,5 +1,5 @@
 <div class="container clearfix">
-    <cm-blog-overview
+    <app-blog-overview
         [blogTitle]="blogTitle">
-    </cm-blog-overview>
+    </app-blog-overview>
 </div>
