--- a/src/app/shared/blog-overview/blog-overview.component.html
+++ b/src/app/shared/blog-overview/blog-overview.component.html
@@ -32,7 +32,7 @@
     </div>
 
     <div class="col-md-3">
-        <cm-blog-sidebar></cm-blog-sidebar>
+        <app-blog-sidebar></app-blog-sidebar>
     </div>
 
 </div>
