--- a/src/app/navigationpages/blog/dev/post/graphql.component.html
+++ b/src/app/navigationpages/blog/dev/post/graphql.component.html
@@ -1,4 +1,4 @@
-<cm-blog-post
+<app-blog-post
     [postTitle]="postTitle()"
     [postDate]="postDate()">
     <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, vero, obcaecati, aut,
@@ -27,4 +27,4 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, dolor quis. Sunt, ut, explicabo, aliquam
         tenetur ratione tempore quidem voluptates cupiditate voluptas illo saepe quaerat numquam recusandae?
         Qui, necessitatibus, est!</p>
-</cm-blog-post>
+</app-blog-post>
