--- a/src/app/navigationpages/blog/dev/post/reactive-spring.component.html
+++ b/src/app/navigationpages/blog/dev/post/reactive-spring.component.html
@@ -1,4 +1,4 @@
-<cm-blog-post>
+<app-blog-post>
     <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, vero, obcaecati, aut,
         error quam sapiente nemo saepe quibusdam sit excepturi nam quia corporis eligendi eos magni recusandae
         laborum minus inventore?</p>
@@ -25,4 +25,4 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, dolor quis. Sunt, ut, explicabo, aliquam
         tenetur ratione tempore quidem voluptates cupiditate voluptas illo saepe quaerat numquam recusandae?
         Qui, necessitatibus, est!</p>
-</cm-blog-post>
+</app-blog-post>
