--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 
     <div class="container">
         <br/>
-        <cm-custom-breadcrumb></cm-custom-breadcrumb>
+        <app-custom-breadcrumb></app-custom-breadcrumb>
         <router-outlet></router-outlet>
     </div>
 
