--- a/src/app/navigationpages/about/about.component.html
+++ b/src/app/navigationpages/about/about.component.html
@@ -17,7 +17,7 @@
             <a [routerLink]="['/blogs/game']" [queryParams]="{page: 1}"><i>Let's Play</i> gaming blog</a> which
             features Chinese games for Western audiences. Perhaps it will trigger an interest you did not know you had.
             My level of Chinese is still very immature and I am bound to make mistakes. I welcome any feedback on my
-            writing! Enjoy.
+            writing!
         </p>
     </div>
 </div>
