--- a/src/app/navigationpages/blog/gaming/gaming-blog.component.html
+++ b/src/app/navigationpages/blog/gaming/gaming-blog.component.html
@@ -1,5 +1,6 @@
 <div class="container clearfix">
     <app-blog-overview
-        [blogTitle]="blogTitle">
+        [blogTitle]="blogTitle"
+        [blogPosts]="posts">
     </app-blog-overview>
 </div>
