--- a/src/app/navigationpages/home/home.component.html
+++ b/src/app/navigationpages/home/home.component.html
@@ -1,1 +1,5 @@
-<p>home</p>
+<div class="container clearfix">
+    <app-blog-overview
+        [blogPosts]="posts">
+    </app-blog-overview>
+</div>
