--- a/src/app/shared/blog-overview/blog-overview.component.html
+++ b/src/app/shared/blog-overview/blog-overview.component.html
@@ -1,4 +1,4 @@
-<h1 class="mt-4 mb-3">{{blogTitle}}</h1>
+<h1 class="mt-4 mb-3" *ngIf="blogTitle">{{blogTitle}}</h1>
 
 <div class="row">
     <div class="col-md-9">
