--- a/src/app/shared/blog-sidebar/blog-sidebar.component.html
+++ b/src/app/shared/blog-sidebar/blog-sidebar.component.html
@@ -13,33 +13,9 @@
 <div class="card my-4">
     <h5 class="card-header">Categories</h5>
     <div class="card-body">
-        <div class="row">
-            <div class="col-lg-6">
-                <ul class="list-unstyled mb-0">
-                    <li>
-                        <a href="#">Web Design</a>
-                    </li>
-                    <li>
-                        <a href="#">HTML</a>
-                    </li>
-                    <li>
-                        <a href="#">Freebies</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="col-lg-6">
-                <ul class="list-unstyled mb-0">
-                    <li>
-                        <a href="#">JavaScript</a>
-                    </li>
-                    <li>
-                        <a href="#">CSS</a>
-                    </li>
-                    <li>
-                        <a href="#">Tutorials</a>
-                    </li>
-                </ul>
-            </div>
+
+        <div class="list-unstyled mb-0" *ngFor="let categoryEntry of getTop6Categories() | keyvalue;let i = index;">
+            <a href="javascript:void(0);" (click)="searchCategory(categoryEntry.key)">{{getEnumString(categoryEntry.key)}} ({{categoryEntry.value}})</a>
         </div>
     </div>
 </div>
