--- a/src/app/shared/blog-sidebar/blog-sidebar.component.html
+++ b/src/app/shared/blog-sidebar/blog-sidebar.component.html
@@ -15,7 +15,8 @@
     <div class="card-body">
 
         <div class="list-unstyled mb-0" *ngFor="let categoryEntry of getTop6Categories() | keyvalue;let i = index;">
-            <a href="javascript:void(0);" (click)="searchCategory(categoryEntry.key)">{{getEnumString(categoryEntry.key)}} ({{categoryEntry.value}})</a>
+            <a [routerLink]="['/search-results']" [queryParams]="{category: categoryEntry.key}">
+                {{getEnumString(categoryEntry.key)}} ({{categoryEntry.value}})</a>
         </div>
     </div>
 </div>
