refactoring: split category widget to separate module

--- a/src/app/shared/blog-sidebar/blog-sidebar.component.html
+++ b/src/app/shared/blog-sidebar/blog-sidebar.component.html
@@ -10,13 +10,4 @@
     </div>
 </div>
 
-<div class="card my-4">
-    <h5 class="card-header">Categories</h5>
-    <div class="card-body">
-
-        <div class="list-unstyled mb-0" *ngFor="let categoryEntry of getTop6Categories() | keyvalue;let i = index;">
-            <a [routerLink]="['/search-results']" [queryParams]="{category: categoryEntry.key}">
-                {{getEnumString(categoryEntry.key)}} ({{categoryEntry.value}})</a>
-        </div>
-    </div>
-</div>
+<app-blog-sidebar-category></app-blog-sidebar-category>
