implement search widget

--- a/src/app/navigationpages/search-results/search-results.component.html
+++ b/src/app/navigationpages/search-results/search-results.component.html
@@ -1,6 +1,6 @@
 <div class="container clearfix">
     <app-blog-overview
         [blogTitle]="title"
-        [blogPosts]="posts">
+        [blogPosts]="getMatchingPosts()">
     </app-blog-overview>
 </div>
