--- a/src/app/shared/blog-sidebar/blog-sidebar.component.html
+++ b/src/app/shared/blog-sidebar/blog-sidebar.component.html
@@ -1,13 +1,2 @@
-<div class="card mb-4">
-    <h5 class="card-header">Search</h5>
-    <div class="card-body">
-        <div class="input-group">
-            <input type="text" class="form-control" placeholder="Search for...">
-            <span class="input-group-btn">
-                  <button class="btn btn-secondary" type="button">Go!</button>
-                </span>
-        </div>
-    </div>
-</div>
-
+<app-blog-sidebar-search></app-blog-sidebar-search>
 <app-blog-sidebar-category></app-blog-sidebar-category>
