General layout and about page

--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -1,5 +1,6 @@
 <footer class="footer py-5 bg-dark">
     <div class="container">
-        <p class="m-0 text-center text-white">Copyright © Alexander Tang {{getCurrentYear()}}</p>
+        <p class="m-0 text-center text-white">Copyright © Zimcke Van de Staey {{getCurrentYear()}}</p>
+        <p class="m-0 text-center text-white">Template based on <a href="https://AlexanderTang.github.io">AlexanderTang.github.io</a></p>
     </div>
 </footer>
