--- a/src/app/navigationpages/about/about.component.html
+++ b/src/app/navigationpages/about/about.component.html
@@ -1,6 +1,11 @@
-<h1 class="mt-4 mb-3">About - Alexander Tang</h1>
+<h1 class="mt-4 mb-3">About - Zimcke Van de Staey</h1>
 
 <div class="row">
+    <div class="col-lg-3">
+        <img class="img-fluid rounded mb-4" src="assets/images/zimcke.jpg" alt="Me">
+    </div>
+</div>
+<!-- <div class="row">
     <div class="col-lg-5">
         <img class="img-fluid rounded mb-4" src="assets/images/me_with_bruce_lee.jpg" alt="">
     </div>
@@ -20,7 +25,7 @@
             writing!
         </p>
     </div>
-</div>
+</div> -->
 
 <h3 class="mt-4 mb-3">Contact Me</h3>
-<p><b>E-mail: </b><a href="javascript:void(0);" (click)="mailTo()"> alexanderghtang@gmail.com</a></p>
+<p><a href="javascript:void(0);" (click)="mailTo()">Email me</a></p>
