--- a/src/app/shared/blog-overview/blog-overview.component.html
+++ b/src/app/shared/blog-overview/blog-overview.component.html
@@ -16,7 +16,7 @@
                 </div>
                 <div class="card-footer text-muted">
                     Posted on {{post.postDate | date:'longDate'}} by
-                    <a [routerLink]="['/about']">Alexander Tang</a>
+                    <a [routerLink]="['/about']">Zimcke Van de Staey</a>
                 </div>
             </div>
         </div>
