--- a/src/assets/sass/util/_breadcrumb.scss
+++ b/src/assets/sass/util/_breadcrumb.scss
@@ -13,7 +13,7 @@
 }
 
 .xng-breadcrumb-item {
-    color: #007bff;
+    color: #6FC48A;
     text-decoration: none;
     background-color: transparent;
 }
