--- a/src/app/navigationpages/about/about.component.html
+++ b/src/app/navigationpages/about/about.component.html
@@ -1,31 +1,23 @@
-<h1 class="mt-4 mb-3">About - Zimcke Van de Staey</h1>
+<h2 class="mt-4 mb--10">Zimcke Van de Staey</h2>
 
 <div class="row">
     <div class="col-lg-3">
         <img class="img-fluid rounded mb-4" src="assets/images/zimcke.jpg" alt="Me">
     </div>
-</div>
-<!-- <div class="row">
-    <div class="col-lg-5">
-        <img class="img-fluid rounded mb-4" src="assets/images/me_with_bruce_lee.jpg" alt="">
-    </div>
-    <div class="col-lg-7">
-        <p>I am a software developer by trade. I graduated from KU Leuven in 2017 with a masters degree in Computer
-            Science and specialization in AI. Since then I have learned a lot about various technologies in the world of
-            full stack web development.</p>
-        <p>During my learning process I was lucky to have an abundance in online teaching material
-            made available by other experts. With this blog I wish to give back to the community by sharing my insights.
-            I encourage you to mail me about any mistakes you may have found, subjects that were not clear to
-            you, contributions you found particularly helpful, any feedback really.</p>
-        <p>One of my other hobbies is video gaming. I am also currently studying Chinese and enjoy Chinese games. It
-            could be interesting to start a
-            <a [routerLink]="['/blogs/game']" [queryParams]="{page: 1}"><i>Let's Play</i> gaming blog</a> which
-            features Chinese games for Western audiences. Perhaps it will trigger an interest you did not know you had.
-            My level of Chinese is still very immature and I am bound to make mistakes. I welcome any feedback on my
-            writing!
+    <div class="col-lg-9">
+        <h3 class="mb-3">About</h3>
+        <p class="p-spaced">
+            I am currently doing research on computer science and STEM education as a PhD student at Ghent University. 
+            I am holding a masters degree in Computer Science (2019) and Musicology (2013) from the University of Leuven.
+            In 2011-2012 I was enrolled at Université Paris-Sorbonne Paris IV with an Erasmus exchange.
+        </p>
+
+        <h3 class="mt-4 mb-3">Contact Me</h3>
+        <p class="p-spaced">
+            I am always excited to receive email that does not contain bills or silly advertisements, 
+            so feel free to <a href="javascript:void(0);" (click)="mailTo()">Email me</a>
+            or drop me a text on WeChat (zimcke).
         </p>
     </div>
-</div> -->
+</div>
 
-<h3 class="mt-4 mb-3">Contact Me</h3>
-<p><a href="javascript:void(0);" (click)="mailTo()">Email me</a></p>
