--- a/src/app/core/mainheader/main-header.component.html
+++ b/src/app/core/mainheader/main-header.component.html
@@ -1,13 +1,13 @@
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
         <a class="navbar-brand" [routerLink]="['/']">Home</a>
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
-                data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
-                aria-label="Toggle navigation">
+        <button class="navbar-toggler navbar-toggler-right" type="button"
+                data-target="#navbarResponsive"
+                (click)="toggleMainHeadersCollapsed()">
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="navbarResponsive">
+        <div class="collapse navbar-collapse" id="navbarResponsive" [ngClass]="{'show': !mainHeadersCollapsed}">
             <ul class="navbar-nav ml-auto">
                 <!-- <li class="nav-item dropdown" dropdown>
                     <a href
