Images, favicon, initial posts

--- a/src/app/core/mainheader/main-header.component.html
+++ b/src/app/core/mainheader/main-header.component.html
@@ -31,9 +31,15 @@
                            routerLinkActive="active">Gaming Blog</a>
                     </div>
                 </li> -->
+                <!-- <li class="nav-item">
+                        <a class="nav-link" [routerLink]="['/blogs']" [queryParams]="{page:1}" routerLinkActive="active">Blog</a>
+                </li> -->
+                <li class="nav-item">
+                    <a class="nav-link" [routerLink]="['/publications']" routerLinkActive="active">Publications</a>
+                </li>
                 <li class="nav-item">
                         <a class="nav-link" [routerLink]="['/bio']" routerLinkActive="active">Bio</a>
-                    </li>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" [routerLink]="['/about']" routerLinkActive="active">About</a>
                 </li>
