--- a/src/app/navigationpages/about/about.component.html
+++ b/src/app/navigationpages/about/about.component.html
@@ -12,6 +12,11 @@
             In 2011-2012 I was enrolled at Université Paris-Sorbonne Paris IV with an Erasmus exchange.
         </p>
 
+        <p>In 2017 I co-created the Co-De learning platform for teaching computational thinking in secondary education. 
+            More information can be found on 
+            <a href="https://computationeeldenken.org">https://computationeeldenken.org</a>.
+        </p>
+
         <h3 class="mt-4 mb-3">Contact Me</h3>
         <p class="p-spaced">
             I am always excited to receive email that does not contain bills or silly advertisements, 
