--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -1,6 +1,13 @@
 <footer class="footer py-5 bg-dark">
     <div class="container">
-        <p class="m-0 text-center text-white">Copyright © Zimcke Van de Staey {{getCurrentYear()}}</p>
-        <p class="m-0 text-center text-white">Template based on <a href="https://AlexanderTang.github.io">AlexanderTang.github.io</a></p>
+        <p class="m-0 text-center text-white">
+            Copyright © <a href="javascript:void(0);" (click)="mailTo()">Zimcke Van de Staey</a> {{getCurrentYear()}}
+            <br><br>
+        </p>
+        <p class="m-0 text-center text-white">
+            Template based on <a href="https://AlexanderTang.github.io">AlexanderTang.github.io</a>
+            <br>
+            ( Imitation is the highest form of intelligence. )
+        </p>
     </div>
 </footer>
