--- a/src/app/navigationpages/blog/dev/post/graphql.component.html
+++ b/src/app/navigationpages/blog/dev/post/graphql.component.html
@@ -1,9 +1,9 @@
 <app-blog-post
     [postTitle]="postTitle()"
     [postDate]="postDate()">
-    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, vero, obcaecati, aut,
-        error quam sapiente nemo saepe quibusdam sit excepturi nam quia corporis eligendi eos magni recusandae
-        laborum minus inventore?</p>
+    <p class="lead">I used to be a bookworm. Ironically enough, there was less time for me to dive into books during my studies.
+        Since I started working in Ghent I find that I have much more time to read, 
+        mostly during my commute or at night at home. With 2020 in sight, I want to share the books I plan to read in the coming months.</p>
 
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, tenetur natus doloremque laborum quos iste
         ipsum rerum obcaecati impedit odit illo dolorum ab tempora nihil dicta earum fugiat. Temporibus,
@@ -13,13 +13,13 @@
         eius illum consequuntur neque dicta incidunt ullam ea hic porro optio ratione repellat perspiciatis.
         Enim, iure!</p>
 
-    <blockquote class="blockquote">
+    <!-- <blockquote class="blockquote">
         <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a
             ante.</p>
         <footer class="blockquote-footer">Someone famous in
             <cite title="Source Title">Source Title</cite>
         </footer>
-    </blockquote>
+    </blockquote> -->
 
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, nostrum, aliquid, animi, ut quas placeat
         totam sunt tempora commodi nihil ullam alias modi dicta saepe minima ab quo voluptatem obcaecati?</p>
@@ -28,3 +28,4 @@
         tenetur ratione tempore quidem voluptates cupiditate voluptas illo saepe quaerat numquam recusandae?
         Qui, necessitatibus, est!</p>
 </app-blog-post>
+        
