--- a/src/app/shared/blog-post/blog-post.component.html
+++ b/src/app/shared/blog-post/blog-post.component.html
@@ -8,7 +8,7 @@
                 <img class="img-fluid rounded" src="assets/images/{{postImageName}}" alt="">
                 <hr>
             </div>
-            <p>Posted on {{postDate | date:'longDate'}} by <a [routerLink]="['/about']">Alexander Tang</a></p>
+            <p>Posted on {{postDate | date:'longDate'}} by <a [routerLink]="['/about']">Zimcke Van de Staey</a></p>
             <hr>
             <p class="lead">{{postAbstract}}</p>
             <ng-content></ng-content>
