--- a/src/app/navigationpages/blog/chinese/post/wojia.component.html
+++ b/src/app/navigationpages/blog/chinese/post/wojia.component.html
@@ -10,12 +10,7 @@
         my sisters new house and (3) my workplace.
     </p>
 
-    <video controls width="100%">
-        <source src="/assets/images/wojia.mp4"
-                type="video/mp4">
-    
-        Sorry, your browser doesn't support embedded videos.
-    </video>
+    <iframe src="https://player.vimeo.com/video/381244824" width="100%" height="410" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
         
 </app-blog-post>
         
