New article on Cantopop

--- a/src/assets/sass/gh_page_main.scss
+++ b/src/assets/sass/gh_page_main.scss
@@ -18,6 +18,16 @@ $fa-font-path: "~font-awesome/fonts";
     border-color: #8EB897;
 }
 
+.btn-primary:hover {
+    background-color: #C3E8BD;
+    border-color: #C3E8C3;
+}
+
+.btn-secondary:hover {
+    background-color: #C3E8BD;
+    border-color: #C3E8C3;
+}
+
 a {
   color: #6FC48A;  
 }
